--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@ionic/react": "^8.5.5",
     "@ionic/react-router": "^8.5.5",
+    "apexcharts": "^4.7.0",
+    "chart.js": "^4.4.9",
     "ionicons": "^7.4.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
