--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@ionic/react-router": "^8.5.5",
     "apexcharts": "^4.7.0",
     "chart.js": "^4.4.9",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "ionicons": "^7.4.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3"
   },
